--- a/report/Management/management.tex
+++ b/report/Management/management.tex
@@ -1,4 +1,4 @@
-\chapter{Project Management}
+\chapter{Poem Generation}
 \ifpdf
     \graphicspath{{Management/ManagementFigs/PNG/}{Management/ManagementFigs/PDF/}{Management/ManagementFigs/}}
 \else
