--- a/report/report.tex
+++ b/report/report.tex
@@ -4,7 +4,7 @@
 \documentclass[oneside,12pt]{Classes/CUEDthesisPSnPDF}
 
 \ifpdf
-    \pdfinfo { /Title  (Poetic Precision)
+    \pdfinfo { /Title  (The Poetry Pioneer)
                /Creator (TeX)
                /Producer (pdfTeX)
                /Subject (Poetic Precision)
@@ -122,7 +122,7 @@
 \include{Introduction/introduction}
 \include{Design/design}
 \include{Theory/theory}
-%\include{Implementation/implementation}
+\include{Implementation/implementation}
 %\include{Management/management}
 \include{Evaluation/evaluation}
 %\include{Conclusions/conclusions}
